--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint -f unix \"**/*.ts\""
+    "lint": "eslint -f unix \"**/*.ts\"",
+    "start": "node dist/agent.js"
   },
   "packageManager": "pnpm@9.15.9",
   "devDependencies": {
